# singbox-manager

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  build.rs  config.toml  install-release.sh  install.sh  sb-manager.service
.github/workflows/: build-singbox.yml  ci.yml  release.yml
proto/: v2ray_stats.proto
src/: main.rs
src/cli/: kernel.rs  mod.rs  nginx.rs  node.rs  token.rs  user.rs
src/core/: backup.rs  config.rs  doctor.rs  grpc.rs  mod.rs  nginx.rs  singbox.rs  sysinfo.rs  traffic.rs
src/db/: mod.rs  tg_repo.rs  traffic_repo.rs  user_repo.rs
src/db/migrations/: 001_init.sql  002_allowed_nodes.sql  003_sub_token.sql  004_traffic_multiplier.sql  005_telegram.sql
src/model/: config.rs  mod.rs  node.rs  telegram.rs  traffic.rs  user.rs
src/service/: mod.rs  node_service.rs  runtime_service.rs  stats_html.rs  sub_server.rs  sub_service.rs  tg_service.rs  traffic_service.rs  user_service.rs
src/tui/: app.rs  forms.rs  mod.rs  runner.rs
src/tui/pages/: dashboard.rs  kernel.rs  logs.rs  mod.rs  nginx.rs  nodes.rs  users.rs
src/tui/widgets/: mod.rs  status_bar.rs  tab_bar.rs
