[package]
name    = "singbox-manager"
version = "0.3.13"
edition = "2021"

[[bin]]
name = "sb"
path = "src/main.rs"

[dependencies]
ratatui            = "0.29"
crossterm          = "0.28"
clap               = { version = "4", features = ["derive"] }
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal", "process", "fs", "io-util"] }
tonic              = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost"] }
prost              = "0.13"
sqlx               = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
base64             = "0.22"
urlencoding        = "2"
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls"] }
chrono             = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid               = { version = "1", features = ["v4"] }
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
axum               = { version = "0.7", default-features = false, features = ["tokio", "http1", "query"] }
qrcode             = { version = "0.14", default-features = false, features = ["svg"] }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["transport", "prost"] }
protoc-bin-vendored = "3"

[profile.release]
opt-level     = 3
strip         = "debuginfo"
lto           = true
codegen-units = 1
